[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Squada_One/SquadaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Lift.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.5782, 47.978 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Lift" type="Area2D" groups=[
"lift",
]]
position = Vector2( -101.293, 49.5051 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -65.5
margin_right = 400.0
margin_bottom = 65.5
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckB" type="Button" parent="HUD/VBoxContainer"]
margin_right = 400.0
margin_bottom = 41.0
text = "DECK B"

[node name="DeckC" type="Button" parent="HUD/VBoxContainer"]
margin_top = 45.0
margin_right = 400.0
margin_bottom = 86.0
text = "DECK C"

[node name="DeckF" type="Button" parent="HUD/VBoxContainer"]
margin_top = 90.0
margin_right = 400.0
margin_bottom = 131.0
text = "DECK F"
[connection signal="body_entered" from="." to="." method="player_entered"]
[connection signal="body_exited" from="." to="." method="player_exited"]
